--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         
         /* Hero Section - Fixed Size */
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('/home/manmoro/Desktop/bestwise company/images/IMG-20250826-WA0019.jpg');
+            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/IMG-20250826-WA0019.jpg');
             background-size: cover;
             background-position: center;
             color: white;
@@ -686,7 +686,7 @@
                 <!-- Product 1 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="/images/IMG-20250826-WA0015.jpg" alt="BS-1 60V-20AH">
+                        <img src="images/IMG-20250826-WA0015.jpg" alt="BS-1 60V-20AH">
                     </div>
                     <div class="product-info">
                         <h3>BS-1 60V-20AH</h3>
@@ -703,7 +703,7 @@
                 <!-- Product 2 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="/images/IMG-20250826-WA0013.jpg" alt="BS-1 72V-20AH">
+                        <img src="images/IMG-20250826-WA0013.jpg" alt="BS-1 72V-20AH">
                     </div>
                     <div class="product-info">
                         <h3>BS-1 72V-20AH</h3>
@@ -720,7 +720,7 @@
                 <!-- Product 3 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="/images/IMG-20250826-WA0050.jpg" alt="BS-2 72V-20AH">
+                        <img src="images/IMG-20250826-WA0050.jpg" alt="BS-2 72V-20AH">
                     </div>
                     <div class="product-info">
                         <h3>BS-2 72V-20AH</h3>
@@ -737,7 +737,7 @@
                 <!-- Product 4 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="/images/IMG-20250826-WA0019.jpg" alt="BS-2 72V-32AH">
+                        <img src="images/IMG-20250826-WA0019.jpg" alt="BS-2 72V-32AH">
                     </div>
                     <div class="product-info">
                         <h3>BS-2 72V-32AH</h3>
@@ -754,7 +754,7 @@
                 <!-- Product 5 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="/images/WhatsApp Image 2025-09-10 at 1.45.53 PM.jpeg" alt="BS-3 72V-20AH">
+                        <img src="images/WhatsApp Image 2025-09-10 at 1.45.53 PM.jpeg" alt="BS-3 72V-20AH">
                     </div>
                     <div class="product-info">
                         <h3>BS-3 72V-20AH</h3>
@@ -771,7 +771,7 @@
                 <!-- Product 6 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="/images/IMG-20250826-WA0011.jpg" alt="BS-3 72V-32AH">
+                        <img src="images/IMG-20250826-WA0011.jpg" alt="BS-3 72V-32AH">
                     </div>
                     <div class="product-info">
                         <h3>BS-3 72V-32AH</h3>
@@ -800,7 +800,7 @@
                     <p>Located in Dar es Salaam, we serve customers across Tanzania with reliable and efficient electric mobility solutions.</p>
                 </div>
                 <div class="about-image">
-                    <img src="/images/WhatsApp Image 2025-09-08 at 3.23.41 PM.jpeg" alt="Bestwise Company Office" style="width: 100%; height: 100%; object-fit: cover;">
+                    <img src="images/WhatsApp Image 2025-09-08 at 3.23.41 PM.jpeg" alt="Bestwise Company Office" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
             </div>
         </div>
