--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
-                            <p>Plot 771, Block 2, Makwaia Street</p>
+                            <p>Plot 771, barakani road</p>
                             <p>Kinondoni District, PO Box 9503</p>
                             <p>Dar es Salaam, Tanzania</p>
                         </div>
@@ -842,7 +842,7 @@
         <input type="hidden" name="_subject" value="New Contact Form Submission">
         <input type="hidden" name="_template" value="table">
         <input type="hidden" name="_captcha" value="false">
-         <input type="hidden" name="_next" value="https://bestwisemyth.com/thank-you.html">
+         <input type="hidden" name="_next" value="https://emma-1854.github.io/bestwisemyth/thank-you.html">
         
         <div class="form-group">
             <label for="name">Full Name</label>
