--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
         
         /* Hero Section - Fixed Size */
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/IMG-20250826-WA0019.jpg');
+            background: url('images/IMG-20250826-WA0019.jpg');
             background-size: cover;
             background-position: center;
-            color: white;
+            color: rgb(16, 108, 228);;
             text-align: center;
             padding: 150px 0 100px;
             margin-top: 70px;
