--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             background: url('images/IMG-20250826-WA0019.jpg');
             background-size: cover;
             background-position: center;
-            color: rgb(16, 108, 228);;
+            color: rgba(6, 202, 236, 0.979);
             text-align: center;
             padding: 150px 0 100px;
             margin-top: 70px;
